# delorean

./: .gitignore  .gitmodules  Makefile  README.md  ambiata-delorean.cabal  boris.toml  delorean.cabal  delorean.lock-7.10.2  delorean.lock-8.0.1  delorean.submodules  mafia  master.toml  stack.yaml
src/: Delorean.hs
src/Delorean/: Duration.hs  Local.hs
src/Delorean/Local/: Date.hs  DateTime.hs  QQ.hs  Time.hs
test/: DeloreanTest.hs  ambiata-delorean-test.cabal  delorean-test.cabal  test.hs
test/Delorean/: Arbitrary.hs  DurationTest.hs  ParserCheck.hs
test/Delorean/Local/: DateTest.hs  DateTimeTest.hs  QQTest.hs  TimeTest.hs
test/Test/Delorean/: Arbitrary.hs  Duration.hs  ParserCheck.hs
test/Test/Delorean/Local/: Date.hs  DateTime.hs  QQ.hs  Time.hs
