name:                  delorean
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              delorean
category:              Data
cabal-version:         >= 1.8
build-type:            Simple
description:           delorean.

library
  build-depends:
                       base                            >= 3          && < 5
                     , text                            == 1.1.*
                     , time                            == 1.4.*
                     , tz                              == 0.0.0.5
                     , tzdata                          == 0.1.20140324.0

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Paths_delorean
                       Delorean

test-suite test
  type:           exitcode-stdio-1.0
  main-is:        test.hs
  ghc-options:    -Wall -threaded -O2
  hs-source-dirs: test
  build-depends:  base, QuickCheck, delorean
