name:                  ambiata-delorean
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              delorean
category:              Data
cabal-version:         >= 1.8
build-type:            Simple
description:           delorean.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-templatehaskell
                     , attoparsec                      >= 0.11       && < 0.14
                     , template-haskell
                     , text                            == 1.2.*
                     , time                            == 1.4.*
                     , tz                              == 0.0.0.*
                     , tzdata                          == 0.1.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       Paths_ambiata_delorean
                       Delorean
                       Delorean.Duration
                       Delorean.Local
                       Delorean.Local.Date
                       Delorean.Local.Time
                       Delorean.Local.DateTime
                       Delorean.Local.QQ

test-suite test
  type:           exitcode-stdio-1.0
  main-is:        test.hs
  ghc-options:    -Wall -threaded -O2
  hs-source-dirs: test
  build-depends:  base, QuickCheck, ambiata-delorean, ambiata-p, attoparsec, text
