name:                  ambiata-delorean-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base
                     , ambiata-p
                     , ambiata-delorean
                     , QuickCheck

  exposed-modules:
                       Test.Delorean.Arbitrary
