name:                  delorean-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base
                     , p
                     , delorean
                     , QuickCheck

  exposed-modules:
                       Test.Delorean.Arbitrary
